client/index.css
* {
  margin-top: 0;
  margin-bottom: 0;
  box-sizing: border-box;
}

main * + * {
  margin-top: 1.5rem;
}

.p-m {
  padding: 16px;
}

.p-s {
  padding: 8px;
}

.pb-s {
  padding-bottom: 8px;
}

.pt-s {
  padding-top: 8px;
}

.pv-s {
  padding-top: 8px;
  padding-bottom: 8px;
}

.pv-m {
  padding-top: 16px;
  padding-bottom: 16px;
}

.pt-m {
  padding-top: 16px;
}

.pv-l {
  padding-top: 32px;
  padding-bottom: 32px;
}

.ph-xs {
  padding-left: 4px;
  padding-right: 4px;
}

.ph-s {
  padding-left: 8px;
  padding-right: 8px;
}

.ph-m {
  padding-left: 16px;
  padding-right: 16px;
}

.block {
  display: block;
}

.visually-hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
}

[tabindex="-1"]:focus {
  outline: none;
}

html {
  font-size: 100%;
}

body {
  margin: 0;
  font-family: georgia, serif;
  color: #2f2822;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

h1 {
  font-size: 1.3rem;
  max-width: 40ch;
}

h2 {
  font-size: 1rem;
  max-width: 40ch;
}

p,
li {
  max-width: 60ch;
}

h1,
h2,
h3,
h4,
h5,
.font-sans-serif {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  line-height: 1.2;
}

h1 a,
h2 a {
  text-decoration: none;
}

p {
  line-height: 1.6;
}

.text-subtle {
  color: #3d4852;
  font-weight: normal;
}

a {
  color: #c35300;
}

a:focus {
  background-color: #c35300;
  outline: 3px solid #c35300;
  color: white;
}

.url {
  word-break: break-all;
  font-size: 1em;
}

.font-bold {
  font-weight: bold;
}

.skip-link {
  background: #22292f;
  color: white;
  display: block;
  position: absolute;
  transform: translateY(-100%);
  top: 0;
  left: 0;
  padding: 8px;
}

.skip-link:focus {
  transform: translateY(0%);
}

.offline-message {
  background-color: #c35300;
  color: white;
  max-width: none;
  padding: 8px 16px;
}

.offline-message + .main-nav {
  border-top: none;
}

.main-header {
  border-top: #ff6600 3px solid;
  background: #f8fafc;
  border-bottom: 3px solid #f1f5f8;
}

.main-nav__list {
  padding: 0;
  display: flex;
}

.main-nav__list-item {
  display: inline-block;
}

.main-nav__link {
  text-decoration: none;
  color: #3d4852;
  font-weight: normal;
  box-shadow: 0 3px 0px #dae1e7;
}

.main-nav__link[aria-current="page"] {
  box-shadow: 0 3px 0px #ff6600;
  color: #22292f;
  font-weight: 500;
}

.main-nav__link:focus[aria-current="page"] {
  box-shadow: none;
  color: white;
}

.item-meta,
.text-smaller {
  font-weight: 600;
  font-size: 0.9rem;
  color: #22292f;
}

.news-list {
  padding: 0;
  margin: 0;
}

.news-list__header {
  border-bottom: 2px solid #f1f5f8;
  background: #f8fafc;
}

.news-list-item * + * {
  margin-top: 0.7em;
}

ul .news-list-item {
  list-style-type: none;
}

.news-list-item {
  margin-top: 0;
  padding: 16px;
  border-bottom: 2px solid #f1f5f8;
  list-style-position: inside;
  max-width: none;
}

.news-list-item__title {
  display: inline;
}

.news-list-item__comments {
  font-weight: bold;
  text-decoration: none;
  font-size: 0.9rem;
}

.news-list-item__meta {
  margin-top: 0;
}

.pagination {
  margin-top: 0;
}

.pagination-list {
  margin-top: 0;
  display: flex;
  max-width: 50ch;
  padding: 8px;
}

.pagination-list * + * {
  margin-top: 0;
}

.pagination-list__item {
  display: block;
  font-weight: bold;
}

.pagination-list__next {
  margin-left: auto;
}

.pagination-list__link {
  padding: 8px;
  display: block;
  text-decoration: none;
}

.comments-list {
  padding-left: 0px;
}

.comments-list .comments-list {
  padding-left: 16px;
  border-left: 3px solid #dae1e7;
}

.comments-list__item {
  list-style: none;
}

.comments-list__item-content,
.comments-list__item-content * + * {
  margin-top: 0.7em !important;
}

.comments-list__item-content a {
  word-break: break-all;
}

.comments-list__item-content pre {
  overflow-x: auto;
}

.main-footer {
  background: #f8fafc;
  border-top: 3px solid #f1f5f8;
  border-bottom: #ff6600 3px solid;
}

.main-footer a {
  color: #903d00;
}

.main-footer a:focus {
  background-color: #903d00;
  outline-color: #903d00;
  color: white;
}

.icon {
  fill: currentColor;
  height: 1em;
  width: 1em;
  vertical-align: middle;
  display: inline-block;
  margin-right: 0.3em;
  margin-top: 0;
}

